# rag

./: .gitignore  README.md  Singularity  chatbot.py  conf.toml  download-pages.sh  download-tickets.sh  form.yml  get_embedding_function.py  manifest.yml  ollama-pull.sh  ollama-submit.sh  populate_database.py  prompt_template.txt  pyproject.toml  query_data.py  rag_prompt_template.txt  requirements.txt  run-chatbot.sh  submit.yml.erb  test_rag.py  view.html.erb
data/: 2022-RCP-training-survey.aspx.html  ARDC-webinars-23-26-nov-2021.aspx.html  AWS-Data-Transfer.aspx.html  AWS-tutorials.aspx.html  Accessing-Cloudstor.aspx.html  Advanced-users.aspx.html  AlphaFold-2.1.aspx.html  AlphaFold.aspx.html  Basic-Git-Usage.aspx.html  Batch-jobs.aspx.html  Brain-Cancer-Center-AWS-Support.aspx.html  Capability-Building-Program.aspx.html  Case-studies.aspx.html  Cloud-Data-Platforms.aspx.html  Compression.aspx.html  Computing-Drop-in.aspx.html  Conda-FAQ.aspx.html  Conda-on-Milton.aspx.html  Contact-us.aspx.html  Cryosparc.aspx.html  DReSA.aspx.html  Dali-Search.aspx.html  Data-Hosting.aspx.html  Data-how-to-store.aspx.html  DataManagement.aspx.html  Database-servers.aspx.html  DiaNN-step-by-step.aspx.html  Disk-quotas.aspx.html  Docker-and-Singularity.aspx.html  External-Compute-Platforms.aspx.html  External-Computer-Usage.aspx.html  External-training.aspx.html  File-Permissions.aspx.html  GCP-downloads.aspx.html  GPUs-on-Milton.aspx.html  Gautomatch.aspx.html  Genomic-Data-Commons.aspx.html  Getting-started-Slurm.aspx.html  Getting-support.aspx.html  Globus-Guest-Sharing.aspx.html  (+105 more)
(+7 files in other folders)
